# Detector

./: .gitignore  LICENSE  README.md
Linux/: CMakeLists.txt
Linux/include/: unzipper.h
Linux/src/: main.cpp  scanner.cpp  unzipper.cpp
Windows/: Windows.slnx  Windows.vcxproj  Windows.vcxproj.filters
Windows/include/: scanner.h
Windows/src/: main.cpp  scanner.cpp  unzipper.cpp
